# radicalise

./: .envrc  .gitignore  .release-it.json  Dockerfile  README.md  index.html  mprocs.yaml  package-lock.json  package.json
backend/: .gitignore  Cargo.toml
backend/.sqlx/: query-000c91cc88f0cb556d599c3234966a2a3a7c65f5a76ed4b389281b2ae395273a.json  query-015a70a898dbee954d7653f022d7a6deb9bee45e42314c5f7654bc442e8b4e55.json  query-01a2693c8034f16e89094970da4ef13469e6fcf13591e133f63690d08b47cfea.json  query-01ab4a4ab7b9f7435dcbc88564290e058820d2f9e0bc787ffa36ec89e96d71fa.json  query-02bb7ec2f883f8c9e4fd9f711aa16ef20f9c75ffc39a3c61ce1ea9b9358bea44.json  query-035bbeaef1d469b218b98e11f6459d89867773dbc2f6b8c0f63ae030ab1c2aa0.json  query-03d12c7a7f25976e195c6a534ce8736b7b0d425810a0382a0d6391dbeecaf18f.json  query-0727e29c4f0a3bdd3376c44c50396eabc593920b55413bad810b2f6968f5b759.json  query-08705c6c2776539aacee4199d24c959f12f8ff3c4f8a9bb54d28ecb4b20210bc.json  query-08a83677323833626120dc93d16768d639d6fbae4973593b5cad95e5c32f9dab.json  query-095025367968d938350b35ca2970bad51f23da6c32655f47681b0a3f39aa5648.json  query-0a30153c0cef88e584a207928a70340d6c2329b6c193ea35b09ea601ac1287c1.json  query-0a639d43d9e3879d6e6484ba9f83ec4cdd2efb4a1e5afbb78cd666833b78e380.json  query-0a87ce3ca25bba13165e81479042ced01e03129d122234cfb9afcee9c530f870.json  query-0bcdf082c6c8cf33a3cf69ead8ba7c842bf46ede413aeda1d43299401db5606e.json  query-0ca0b2e26b01baae8373a673cb1aef4125bc285ef7f8888913db8fc645b831d2.json  query-0ef0e7354785db8bea3a348efe86bb77fe634969d238d11159308c57d16afd32.json  query-11bb8223adcbf82f34933bb25076e9f0bdf5a510bc409bd3dee0c9c9cb8133a6.json  query-1254e0520ac389024efbc2def6c132e1feb35c97a3c599b302a6cefbb692aa8f.json  query-16c1745b6f8de458087df9f8327d0121c48f8daeb51f60b2ad3b80a222f483eb.json  query-1728f310b5c090ce35b9ba4b0d45e054f47f499ba4a57cb062cc4ecb08506358.json  query-17b3931011a64869c1377032d8075e49c4a2de6d6bf07214da381516c228d3a3.json  query-17e16cbeeb6f67de58788f02e8e06052dd1537049a342bfdf8470834d5e2b02f.json  query-186ba2910bfe35356ed7c61a7a113898578eb928fa51c8b0d3cf880c1c5ba128.json  query-18f07c00e085fba353d2efdef6496b1eb72636e4039f384de2dc0e63c074f802.json  query-1b98ae30798d76786ad35c2745e19ea5980db0c1ed0def93d0a547c6cfbbb881.json  query-1c1f3309a2bec987e3e14479690c4dcd51e5c0c34d66a0a65925e3c93c677048.json  query-1cb736555b691a964da61b33074a1298ef3cf9f29a90f92bf6ec31c93c31a55f.json  query-1e197bfebf27a7243206e092ecc4e2cfb1305783e80961c0f5af88ed2ec8f583.json  query-1ee5987aad8721b9f203dca82e320902f4cf42bb99ab46ff1b77eb3f1c7a6bbb.json  query-2109b43fabea8fb823bd5a88fd1340a615a404cb9cef1bf1a6c7a91723f37fc4.json  query-21ac9824d162fab4021e3ae6402c38638257a9eb117ba0d2d07068bad38ba058.json  query-24dda078a2e3b5a81594870f9b8cdeecd278debf031eea05771776f7cac5cdff.json  query-262883161a43a38bed032301a56c6a02f18a6cfdc3e3a1ee46f2811c925599fc.json  (+165 more)
(+372 files in other folders)
