[package]
name = "radicalise"
version = "0.1.13"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
rand = "0.8"
resend-rs = "0.15.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
time = "0.3.41"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
urlencoding = "2.1.3"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
