[package]
name = "radicalise"
version = "1.3.8"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
axum-login = "0.18.0"
chrono = "0.4.42"
cookie = { version = "0.18.1", features = ["signed"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
password-auth = "1.0.0"
reqwest = { version = "0.12.20", features = ["rustls-tls"] }
resend-rs = "0.17.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
urlencoding = "2.1.3"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.17.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
